v1.12.x/api-reference/sdk/python/entities/ml-model.mdx
---
title: ML Model | OpenMetadata Machine Learning Model SDK
description: Learn to manage ML models with OpenMetadata Python SDK. Complete guide with code examples, entity operations, and API integration for machine learning workflows.
sidebarTitle: ML Model
---

# ML Model
Let's dive deeper into the ML Model (`MlModel`) Entity shape and usage with the Python SDK.

## Introduction

When we are talking about Machine Learning tooling there are some projects that automatically come to our mind: [Mlflow](https://mlflow.org/), [TFX](https://www.tensorflow.org/tfx/), [Kubeflow](https://www.kubeflow.org/), [SageMaker](https://aws.amazon.com/sagemaker/)...

The main goal of these solutions is to enable Data Scientists and Machine Learning practitioners to handle the models' lifecycle. As a short summary (not taking into account all the great DevOps work and more specific features), this means:

- Preparing **pipelines** that extract the data from the sources & run the Feature Engineering.
- **Train** multiple models with different inputs and hyperparameters in external computes.
- **Record** all the experiments, their configurations and metrics.
- **Serve** the models or store them externally.

The main focus is then empowering the teams and organising their working approach (usually in short fast-paced cycles), treating all of this in **isolation**. The **metadata** captured by these tools is purely functional: model name, Python/conda environment used, hyperparameter configuration, the signature of the inputs, etc.

Long-story-short: These are great tools to build autonomous, powerful and scalable ML Platforms and/or MLOps processes.

## OpenMetadata & ML
What we are trying to build with OpenMetadata and ML Models is, by no means, a replacement of those tools or the information they provide. Data Science teams NEED structured experimentation and the metadata processing and discovery provided by the projects mentioned above.

Instead, we want to look at ML Models from a different lens: **Where do ML Models fit within a Data Platform?** While - let's call them "lifecycle tools" - give the underlying view of the modelling process, we want to bring **context** and **relationships**.

There are some common questions with lifecycle tools, such as _Where (URL) is the MlModel hosted_, but we are bringing in a product and platform management view:

- Where can we find the dashboards showing the performance evolution of our PROD algorithms? -> **Trust** & **transparency**
- What tables/sources are being used? -> **Lineage** and **traceability**
- Are we using sensitive data? -> **Governance**

This information, together with the rest of the features brought by OpenMetadata, lets us also manage topics such as schema changes in the sources or feature drifts, with the corresponding alerting systems.

While we can already extract certain pieces of information automatically via our Connectors (e.g., [Mlflow](/v1.12.x/connectors/ml-model/mlflow)), there are attributes that we'll need to fill in by ourselves. Thanks to the [Solution Design](/v1.12.x/main-concepts/high-level-design) of OpenMetadata and the [Python SDK](/v1.12.x/api-reference/sdk/python), this is going to be a rather easy task that will unlock the full power of your **organization's metadata**.

## Properties
Now that we have a clearer view of what we are trying to achieve, let's jump into a deeper view on the `MlModel` Entity [definition](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/data/mlmodel.json):

- The `name` and `service` are required when [creating](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/api/data/createMlModel.json) an `MlModel`. The `algorithm` defaults to `mlmodel`, but we normally set it explicitly to make the model easier to discover and compare.
- The `dashboard` is a reference to a Dashboard Entity present in OpenMetadata (what we call an `EntityReference`). This should be a dashboard we have built that shows the evolution of our performance metrics. The **transparency** on ML services is integral, and that is why we have added it to the `MlModel` properties.
- A server with the URL on where to reach the model **endpoint**, to `POST` input data or retrieve a prediction.
- The mlStore specifies the **location** containing the model. Here we support both passing a URI with the object (e.g. `pkl`) location and/or a Docker image in its repository.
- With `mlHyperParameters` we can add the `name`, `value` and `description` of the used hyperparameters.

On top of this information, we can also have common metadata attributes, such as the Owner, tags, followers or **versioning**.

So far so good, but we are missing interesting points:

- What are my model features?
- How do I link these features to their origin/sources?
- What do you mean by "versioning"?

## ML Features
When talking about the `MlModel` features and how to inform them, we have made an interesting distinction:

- On the one hand, there are the results of Feature Engineering as the predictors used to train the model,
- On the other, the actual sources that the predictors are based on.

Being able to track both sides of a feature is a powerful way to know how our algorithm uses the Data Platform. This will help us show feature definitions as well as keep track of their origins.

<Tip>

To fully understand what we are going to show now, it would be interesting for the reader to make sure to visit the section.

</Tip>

Let's create an example of an MlFeature:

```python
from metadata.generated.schema.entity.data.mlmodel import FeatureType, MlFeature

MlFeature(
    name="persona",
    dataType=FeatureType.categorical,
    featureAlgorithm="PCA",
)
```

Some properties that we can define when instantiating an `MlFeature` are the name, the `dataType` and the `featureAlgorithm`. Now, the question is: Are we being thorough in describing what is really going on? Are we going to be able to detect at any point in the future if this model is based on biased predictors (such as gender)?

Here we want to give more **depth**. In order to do so, we can inform another property of the `MlFeature`, which are the `MlFeatureSource`s. The idea is that any feature can be based on an arbitrary number of real/physical sources (e.g., the columns of a Table), and informing this field will allow us to obtain this **relationship**.

If we add this extra information, our feature will look like this, assuming `table1_entity` and `table2_entity`
are existing Table entities:

```python
from metadata.generated.schema.entity.data.mlmodel import (
    FeatureSource,
    FeatureSourceDataType,
    FeatureType,
    MlFeature,
)
from metadata.generated.schema.type.entityReference import EntityReference

MlFeature(
    name="persona",
    dataType=FeatureType.categorical,
    featureSources=[
        FeatureSource(
            name="age",
            dataType=FeatureSourceDataType.integer,
            dataSource=EntityReference(
                id=table1_entity.id, type="table"
            ),
        ),
        FeatureSource(
            name="education",
            dataType=FeatureSourceDataType.string,
            dataSource=EntityReference(
                id=table2_entity.id, type="table"
            ),
        ),
        FeatureSource(
            name="city", dataType=FeatureSourceDataType.string
        ),
    ],
    featureAlgorithm="PCA",
)
```

Note how we added a list of `FeatureSource`, with values such as `name`, `dataType` (regarding the source type, not the categorical/numerical distinction of the `MlFeature`) and an `EntityReference` as the `dataSource`.

With the current Python SDK, the ML model lifecycle goes through the plural `MLModels` facade. The generated
`MlModel` entity is the Pydantic shape returned by the API, while `MLModels` exposes the CRUD helpers.

```python
from metadata.sdk import MLModels, Tables, configure
from metadata.generated.schema.api.data.createMlModel import CreateMlModelRequest
from metadata.generated.schema.entity.data.mlmodel import (
    FeatureSource,
    FeatureSourceDataType,
    FeatureType,
    MlFeature,
)
from metadata.generated.schema.type.entityReference import EntityReference

configure(
    host="http://localhost:8585/api",
    jwt_token="<token>",
)

table1_entity = Tables.retrieve_by_name("sample_service.sample_db.sample_schema.customer_profile")
table2_entity = Tables.retrieve_by_name("sample_service.sample_db.sample_schema.education_profile")

persona_feature = MlFeature(
    name="persona",
    dataType=FeatureType.categorical,
    featureSources=[
        FeatureSource(
            name="age",
            dataType=FeatureSourceDataType.integer,
            dataSource=EntityReference(id=table1_entity.id, type="table"),
        ),
        FeatureSource(
            name="education",
            dataType=FeatureSourceDataType.string,
            dataSource=EntityReference(id=table2_entity.id, type="table"),
        ),
    ],
    featureAlgorithm="PCA",
)

create_model = CreateMlModelRequest(
    name="persona-classifier",
    service="mlflow_service",
    algorithm="random_forest",
    mlFeatures=[persona_feature],
)

my_mlmodel_entity = MLModels.create(create_model)
```

To change model metadata later, retrieve the model, update a copy, and submit it back through the same facade:

```python
from metadata.generated.schema.type.basic import Markdown

model = MLModels.retrieve_by_name("mlflow_service.persona-classifier")
updated_model = model.model_copy(deep=True)
updated_model.description = Markdown("Predicts the user persona segment.")

my_mlmodel_entity = MLModels.update(updated_model)
```

Lineage is explicit in the new SDK. The SDK does not expose the legacy `metadata.add_mlmodel_lineage(model=...)`
helper through `metadata.sdk`; instead, add edges from each feature-source table to the ML model with
`Lineage.add_lineage(...)`:

```python
from metadata.sdk.api import Lineage

Lineage.add_lineage(
    from_entity_id=str(table1_entity.id.root),
    from_entity_type="table",
    to_entity_id=str(my_mlmodel_entity.id.root),
    to_entity_type="mlmodel",
    description="Feature source for persona.age",
)

Lineage.add_lineage(
    from_entity_id=str(table2_entity.id.root),
    from_entity_type="table",
    to_entity_id=str(my_mlmodel_entity.id.root),
    to_entity_type="mlmodel",
    description="Feature source for persona.education",
)
```

If you need to send a full lineage payload, build an `AddLineageRequest` and submit it with
`Lineage.add_lineage_request(...)`:

```python
from metadata.generated.schema.api.lineage.addLineage import AddLineageRequest
from metadata.generated.schema.type.entityLineage import EntitiesEdge
from metadata.generated.schema.type.entityReference import EntityReference
from metadata.sdk.api import Lineage

add_lineage_request = AddLineageRequest(
    edge=EntitiesEdge(
        fromEntity=EntityReference(id=table1_entity.id, type="table"),
        toEntity=EntityReference(id=my_mlmodel_entity.id, type="mlmodel"),
    ),
)

Lineage.add_lineage_request(add_lineage_request)
```

These calls register the **Lineage** information between the feature-source tables and our MlModel instance. Then, we will be able to explore these relationships either via the API or the UI.

If we also have ingested the Lineage from the different Tables in our platform as well as how they relate to the data processing Pipelines, we can obtain a global end-to-end view on our ML Model and all its dependencies.

## Versioning
One of the key features of OpenMetadata is the ability to version our Entities. Being able to keep track of schema changes or any community updates and having an alerting system on top can be life-saving.

In the [Solution Design](/v1.12.x/main-concepts/high-level-design#example-1-updating-columns-of-a-table), we discussed the versioning example on how a Table reacts to adding or deleting columns in terms of its version. How do we manage versions for our MlModels?

Based on the experimentation nature of the ML field, it does not make sense to receive an alert when playing around with the model features. Therefore, we are using **major** version changes when any of the following properties are updated:

- Changes in the algorithm might mean uneven results when comparing predictions (or if handled poorly different outcomes)
- Changes to the server can enable/break integrations to the ML prediction systems.

## Summary
In this doc, we have seen the role that OpenMetadata serves from a Machine Learning perspective and its purpose in giving the vision of ML models inside the Data Platform.

We have shown how to use the Python API to enrich the models' metadata and add the lineage information with its related Entities and how the versioning will respond to changes.

For further information on the properties, do not hesitate to review the [JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/data/mlmodel.json) and for examples and usages with the Python SDK, you can take a look at our [SDK integration tests](https://github.com/open-metadata/OpenMetadata/blob/main/ingestion/tests/integration/sdk/test_sdk_integration.py).
